--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,22 @@
-# Dependencies
+﻿# Node
 node_modules/
-package-lock.json
-
-# Production build
-build/
-dist/
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Database
-*.sqlite
-*.db
-
-# Logs
-logs/
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-lock.yaml
+package-lock.json
 
-# OS files
-.DS_Store
-Thumbs.db
+# Builds
+dist/
+build/
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# Env & secrets
+.env
+.env.*
+!.env.example
 
-# Testing
-coverage/
-
-# Misc
-.cache/
-temp/
-tmp/
+# DB locales (si utilisé)
+*.sqlite
+*.db
+*.db-shm
+*.db-wal
