--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "name": "osteoupgrade-frontend",
   "private": true,
   "version": "1.0.0",
@@ -9,12 +9,12 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@supabase/supabase-js": "2.45.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "vite": "^5.4.0",
-    "@vitejs/plugin-react": "^4.3.0"
+    "@vitejs/plugin-react": "4.3.0",
+    "vite": "5.4.0"
   }
 }
